Lexical Analyzer/tests/test_str_err.c_results.out
Line			Lexeme			Token Class
1		#include <stdio.h> 		Pre Processor directive

2
3			void 			KEYWORD
			main 			KEYWORD
			( 			OPENING BRACKETS
			) 			CLOSING BRACKETS

4			{ 			OPENING BRACES

5			int 			KEYWORD
			num 			IDENTIFIER
			= 			OPERATOR
			2 			NUMBER CONSTANT
			, 			COMMA DELIMITER
			i 			IDENTIFIER
			; 			SEMICOLON DELIMITER

6			char 			KEYWORD
			str_1 			IDENTIFIER
			= 			OPERATOR
			"Hello" 			STRING CONSTANT
			; 			SEMICOLON DELIMITER

7			char 			KEYWORD
			str_2 			IDENTIFIER
			= 			OPERATOR
XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
ERROR: INCOMPLETE_STRING at line no. 7
	"
	^^
XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX


SYMBOL TABLE

	i			IDENTIFIER
	num			IDENTIFIER
	char			KEYWORD
	int			KEYWORD
	main			KEYWORD
	str_1			IDENTIFIER
	str_2			IDENTIFIER
	void			KEYWORD


CONSTANT TABLE

	"Hello"			STRING CONSTANT
	2			NUMBER CONSTANT
